--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,120 @@
+@import url("https://fonts.googleapis.com/css2?family=roboto&family=lobster&display=swap");
+*{
+    color:#00f;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+body {
+    font-family:"roboto", sans-serif;
+    font-size: 1.5 rem;
+    min-height: 200vh;
+
+}
+
+.outer-container{
+    border:3px dashed #000;
+    width:75vw;
+    height: 85vh;
+    margin: 40px auto;
+    position: relative;
+}
+
+.inner-container{
+    border:2px solid #00f;
+    width:40vw;
+    height: 50vh;
+    margin: 200px auto;
+    position: relative;
+    
+}
+
+.box{
+    width: 150px;
+    height: 150px;
+    color:#fff;
+    padding: 1rem;
+}
+
+.absolute{
+    background-color: #00f;
+    position: absolute;
+    top: 100px;
+    left:50px;
+    z-index: 1;
+}
+
+.relative{
+    background-color: red;
+    position: relative;
+    top: 100px;
+    left: 100px;
+}
+
+.fix{
+    background-color:green;
+    position: fixed;
+    top: 200px;
+
+}
+
+.sticky{
+    background-color:#000;
+    position: sticky;
+    top:0;
+}
+
+section{
+    height: 100vh;
+}
+
+.blue{background-color:blue;}
+.read{background-color:red;}
+.green{background-color:green;}
+header,footer{
+    color: #fff;
+    text-align:center;
+    height: 100px;
+    font-size: 5rem;
+}
+
+header{
+    position: sticky;
+    top:0;
+}
+footer{
+    background-color:#000;
+    position:fixed;
+    bottom: 0;
+    width: 100%;
+    font-size:3rem;
+
+}
+
+a:visitied{
+    color:#fff;
+}
+
+.social {background-color:royalblue;
+color:#fff;
+font-size: inherit;
+padding: 1rem;
+position: fixed;
+top: 30%;
+left:0;
+}
+
+.header img{
+    max-width:100%;
+    height: auto;
+    display: block;
+}
+
+.main-header{
+    background-image: url('pic.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 400px;
+
+}
